--- a/src/components/Home/styles/ContactSection.css
+++ b/src/components/Home/styles/ContactSection.css
@@ -1,6 +1,9 @@
 .contact-section {
     padding: 50px;
     background-color: #f4f4f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .contact-container {
@@ -92,8 +95,19 @@
   
   /* Responsive Styling */
   @media (max-width: 768px) {
+
+    .contact-section{
+      width: 100%;
+     
+    }
     .contact-container {
       flex-direction: column;
+      width: 100%;
+    
+    }
+    .contact-form{
+      width: 100%;
+      
     }
   }
   
