--- a/src/components/Home/styles/TeamSection.css
+++ b/src/components/Home/styles/TeamSection.css
@@ -14,11 +14,11 @@
   }
   
   .team-card {
-    background-color: #fff;
+    background: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    max-width: 250px;
+    width: 450px;
     text-align: center;
   }
   
