--- a/src/components/Home/styles/HomeAbout.css
+++ b/src/components/Home/styles/HomeAbout.css
@@ -43,6 +43,15 @@
     align-items: flex-start;
     max-width: 500px;
   }
+
+  @media screen and (max-width: 767px) {
+    .home-about  .primary-btn{
+      flex-direction: column;
+      position: absolute;
+      z-index: 1000;
+      bottom: -70%;
+    }
+  }
   
 
   
