--- a/src/components/Home/styles/WorkProcess.css
+++ b/src/components/Home/styles/WorkProcess.css
@@ -9,15 +9,17 @@
   /* Left Section: Header and Paragraph */
   .work-info {
     max-width: 400px;
+    position: sticky;
+    top: 40%;
   }
   
   .work-info h2 {
-    font-size: 2rem;
+   
     margin-bottom: 10px;
   }
   
   .work-info p {
-    font-size: 1rem;
+   
     line-height: 1.5;
   }
   
@@ -36,12 +38,12 @@
   }
   
   .step h3 {
-    font-size: 1.5rem;
+   
     margin-bottom: 10px;
   }
   
   .step p {
-    font-size: 1rem;
+   
     line-height: 1.4;
   }
   
