--- a/src/components/Home/styles/Hero.css
+++ b/src/components/Home/styles/Hero.css
@@ -3,7 +3,8 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  border-radius: 10px;
+  margin: 10px;
+
 }
 
 .slide-content {
@@ -35,7 +36,7 @@
   z-index: 2;
   color: white;
   padding: 20px;
-  border-radius: 10px;
+ 
   display: inline-block;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background for better readability on all screens */
