--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Responsive fonts based on screen size */
 h1 {
   font-size: 2.5rem;
+  
 }
 
 h2 {
@@ -120,8 +121,8 @@ button, .btn {
   font-weight: 400;
   color: var(--white);
   border: 1px solid transparent;
-  padding: 0.5rem 1rem;
   font-size: 1rem;
+  width: 350px;
   line-height: 1.5;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -137,11 +138,14 @@ button:focus, .btn:focus {
 .btn-primary {
   background-color: var(--primary);
   border-color: var(--primary);
+  
+  
 }
 
 .btn-primary:hover {
   background-color: var(--dark);
   border-color: var(--dark);
+  width: 350px;;
 }
 
 /* Secondary button */
