--- a/src/App.css
+++ b/src/App.css
@@ -118,13 +118,15 @@ a:hover {
 /* Button Styles */
 button, .btn {
   display: inline-block;
+  outline: none;
   font-weight: 400;
   color: var(--white);
   border: 1px solid transparent;
-  font-size: 1rem;
+  font-size: 1.5rem;
   width: 350px;
+  height: 40px;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: 2em;
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
@@ -135,17 +137,17 @@ button:focus, .btn:focus {
 }
 
 /* Primary button */
-.btn-primary {
-  background-color: var(--primary);
+.primary-btn {
+  background-color: var(--orange);
   border-color: var(--primary);
   
   
 }
 
-.btn-primary:hover {
-  background-color: var(--dark);
+.primary-btn:hover {
+  background-color: var(--blue);
   border-color: var(--dark);
-  width: 350px;;
+  width: 350px;
 }
 
 /* Secondary button */
