--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -29,9 +29,7 @@
   .logo img{
     height: 130px;
     width: 130px;
-    object-fit: cover;
-    aspect-ratio: 1;
-  
+    
   }
   
   .contact-info {
@@ -126,7 +124,7 @@
     cursor: pointer;
     position: absolute;
     right:0;
-    margin-bottom: 50%;
+    margin-bottom: 40%;
     margin-right: 2%;
    
   }
@@ -167,6 +165,7 @@
     .navbar {
       flex-direction: column;
       align-items: flex-start;
+      height: 15vh;
     }
   
     .contact-info {
@@ -180,5 +179,11 @@
     .hamburger {
       display: block;
     }
+    
+  .logo img{
+    height: 100px;
+    width: 100px;
+    
+  }
   }
   
