--- a/src/components/Home/styles/ContactSection.css
+++ b/src/components/Home/styles/ContactSection.css
@@ -78,21 +78,12 @@
     border-color: #ff6b6b;
     outline: none;
   }
-  
-  .primary-button {
-    background-color: #ff6b6b;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
+   .contact-form .primary-btn{
+    justify-self: center;
+    width: 100%;
   }
   
-  .primary-button:hover {
-    background-color: #ff4c4c;
-  }
+  
   
   
   
