--- a/src/components/Home/styles/TestimonialSection.css
+++ b/src/components/Home/styles/TestimonialSection.css
@@ -2,6 +2,14 @@
     padding: 20px;
     background-color: #f9f9f9; /* Light background for the section */
   }
+
+  .testimonial-body{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+   
+  }
   
   .testimonial-header {
     text-align: center;
@@ -19,14 +27,17 @@
   }
   
   .testimonial-slider {
-    max-width: 1000px;
-    margin: 0 auto; /* Center the slider */
+    width: 50%;
+    height: 100%;
+  
+   
   }
   
   .testimonial-card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
@@ -58,13 +69,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    height: 350px;
+    width: 350px;
+    background-color: red;
     gap: 10px;
     margin-top: 30px;
   }
   
   .testimonial-images img {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 8px;
   }
@@ -129,8 +144,8 @@
     }
   
     .testimonial-images img {
-      width: 60px;
-      height: 60px;
+     width: 100%;
+     height: 100%;
     }
   }
   
