--- a/src/components/Home/styles/WorkProcess.css
+++ b/src/components/Home/styles/WorkProcess.css
@@ -1,49 +1,102 @@
 .work-process-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 30px;
-    padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 30px;
+  padding: 40px;
+  position: relative;
+}
+
+/* Left Section: Header and Paragraph */
+.work-info {
+  max-width: 400px;
+  position: sticky;
+  top: 40%;
+}
+
+
+/* Divider with a Circle */
+.divider-with-circle {
+  position: absolute;
+  left: 50%;
+
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: #ccc;
+  transform: translateX(-50%);
+}
+
+.divider-with-circle::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 50%;
+  top: 90%;
+  width: 30px;
+  height: 30px;
+  background-color:var(--orange);
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.divider-with-circle::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 90%;
+  width: 50px;
+  height: 50px;
+  background-color:var(--orange);
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Right Section: Work Process Steps */
+.work-steps {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.step {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.step-icon {
+  font-size: 28px;
+  color: #4a90e2;
+  margin-right: 15px;
+}
+
+.step h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.step p {
+  font-size: 1.1em;
+  line-height: 1.4;
+  color: #666;
+}
+
+/* Step Icon Animation for Hover Effect */
+.step:hover .step-icon {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
+
+@media screen and (max-width:768px) {
+  .divider-with-circle{
+    left: 42%;
   }
   
-  /* Left Section: Header and Paragraph */
-  .work-info {
-    max-width: 400px;
-    position: sticky;
-    top: 40%;
-  }
-  
-  .work-info h2 {
-   
-    margin-bottom: 10px;
-  }
-  
-  .work-info p {
-   
-    line-height: 1.5;
-  }
-  
-  /* Right Section: Work Process Steps */
-  .work-steps {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .step {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .step h3 {
-   
-    margin-bottom: 10px;
-  }
-  
-  .step p {
-   
-    line-height: 1.4;
-  }
-  
+}
